...
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            // Campo para el correo electrónico
            OutlinedTextField(
                value = email,
                onValueChange = { viewModel.onEmailChange(it) },
                label = { Text("Correo electrónico") },
                modifier = Modifier.fillMaxWidth(),
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Email,
                    imeAction = ImeAction.Next
                )
            )
...
                    onClick = {
                        viewModel.login(email, password, onLoginSuccess)
                    },
                    modifier = Modifier.fillMaxWidth(),
                    enabled = isLoginEnabled
                ) {
                    Text("Entrar")
                }
            }

            error?.let {
                Spacer(modifier = Modifier.height(12.dp))
                MensajeErrorConIcono(mensaje = it)
...
