package com.spicyairlines.app.ui.components

import androidx.compose.foundation.layout.*
import androidx.compose.foundation.text.KeyboardActions
import androidx.compose.foundation.text.KeyboardOptions
import androidx.compose.material3.*
import androidx.compose.runtime.*
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.LocalFocusManager
import androidx.compose.ui.text.input.*
import androidx.compose.ui.unit.dp

// Composable reutilizable para el campo contraseña
@Composable
fun PasswordTextFieldConCheckbox(
    password: String,
    onPasswordChange: (String) -> Unit
) {
    var mostrarContrasena by remember { mutableStateOf(false) } // Para mostrar en pantalla la contraseña o no
    val focusManager = LocalFocusManager.current

    Column {
        OutlinedTextField(
            value = password,
            onValueChange = onPasswordChange,
            label = { Text("Contraseña") },
            modifier = Modifier.fillMaxWidth(),
            visualTransformation = if (mostrarContrasena)
                VisualTransformation.None
            else PasswordVisualTransformation(), // Mostrar texto como oculto '******'

            keyboardOptions = KeyboardOptions(
                keyboardType = KeyboardType.Password,
                imeAction = ImeAction.Done
            ),
            keyboardActions = KeyboardActions(
                onDone = { focusManager.clearFocus() }
            )
        )

        Row(verticalAlignment = Alignment.CenterVertically) {
            Checkbox(
                checked = mostrarContrasena,
                onCheckedChange = { mostrarContrasena = it }
            )
            Text("Mostrar contraseña")
        }
    }
}
