...
                    _isLoading.value = false
                    _error.value = "No se pudo obtener el ID del usuario."
                }
            }
            .addOnFailureListener {
                _isLoading.value = false
                _error.value = "Correo o contraseña incorrectos."
            }
    }

    // Función privada para cargar el perfil del usuario desde Firestore
    private fun cargarUsuarioDesdeFirestore(uid: String, onSuccess: () -> Unit) {
        firestore.collection("usuarios").document(uid).get()
...
